# wahh40k

./: Info for none 40k fans.txt  LICENSE  base.cpp  create_web_shortcut.vbs  launch_web_game.bat  readme.md  units.txt  weapons.txt
Wahh40k/: CMakeLists.txt  README.md
Wahh40k/include/: base.h  game.h  mechanics.h  unit.h
Wahh40k/src/: base.cpp  game.cpp  main.cpp  mechanics.cpp  unit.cpp
Wahh40k/tests/: test_game.cpp
Wahh40k_Web/: README.md  database.js  game.db  schema.sql  stats.js
Wahh40k_Web/public/: game.js  index.html  styles.css
mini-wargame-cpp/: README.md
mini-wargame-cpp/src/: game.h
mini-wargame-cpp/src/phases/: phase_manager.cpp  phase_manager.h  selection_phase.cpp  selection_phase.h  shooting_phase.cpp
mini-wargame-cpp/tests/: unit_tests.cpp
mini-wargame-fullsuite/: CMakeLists.txt
mini-wargame-fullsuite/data/: units.json
mini-wargame-fullsuite/src/: game.cpp  main.cpp
mini-wargame-fullsuite/src/phases/: advance_phase.cpp  advance_phase.h  shooting_phase.h
mini-wargame-fullsuite/src/units/: unit.cpp  unit.h  weapon.cpp  weapon.h
mini-wargame-fullsuite/src/utils/: rng.cpp  rng.h
web-game/: game.db  package-lock.json  package.json  server.js
web-game/public/: index.html  styles.css
